@@ -3,7 +3,7 @@ Contributors: customwebgmbh
 Tags: woocommerce PostFinance Checkout, woocommerce, PostFinance Checkout, payment, e-commerce, webshop, psp, subscription, recurring payment, processing
 Requires at least: 4.7
 Tested up to: 5.7.2
-Stable tag: 1.0.12
+Stable tag: 1.0.13
 License: Apache 2
 License URI: http://www.apache.org/licenses/LICENSE-2.0
 
@@ -49,4 +49,4 @@ Therefore, it is necessary that you install the this plugin as well.
 
 == Changelog ==
 
-test release
+readme updates
