@@ -3,7 +3,7 @@
  * Plugin Name: WooCommerce PostFinance Checkout Subscription
  * Plugin URI: https://wordpress.org/plugins/woo-postfinancecheckout-subscription
  * Description: Addon to processs WooCommerce Subscriptions with PostFinance Checkout
- * Version: 1.0.12
+ * Version: 1.0.13
  * License: Apache2
  * License URI: http://www.apache.org/licenses/LICENSE-2.0
  * Author: customweb GmbH
@@ -36,7 +36,7 @@ if (! class_exists('WooCommerce_PostFinanceCheckout_Subscription')) {
          *
          * @var string
          */
-        private $version = '1.0.12';
+        private $version = '1.0.13';
 
         /**
          * The single instance of the class.
